Fix focus styling for search input in dark mode

--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -306,7 +306,7 @@ body.no-js .control-field__title {
   width: 100%;
 }
 .control__input:focus {
-  box-shadow: 0 0 3px 0 rgba(68, 68, 68, 0.5);
+  box-shadow: 0 0 3px 0 var(--color-shadows);
 }
 @media (max-width: 640px) {
   .control__input {
